ferrolearn-core/tests/compile_fail/predict_unfitted_linear.stderr
error[E0599]: no method named `predict` found for struct `LinearRegression<F>` in the current scope
  --> tests/compile_fail/predict_unfitted_linear.rs:12:19
   |
12 |     let _ = model.predict(&x);
   |                   ^^^^^^^ method not found in `LinearRegression<f64>`
